# pantheon

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN_theme.md  README.md  audit.toml  autoreload.md  index.html  plan.md  pyproject.toml  script.js  style.css
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml
.pantheon/: system_prompt.example.md  system_prompt.md
pantheon/: auth.py  chat.py  cli.py  config.py  router.py  theme.py  tools.py
pantheon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: api.rs  app.rs  config.rs  db.rs  main.rs  markdown.rs  theme.rs  ui.rs
tests/: test_config.py  test_router.py
