[package]
name = "pan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pan"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde_json = "1"
futures-util = "0.3"
anyhow = "1"
tui-textarea = { version = "0.7", features = ["crossterm"] }
pulldown-cmark = "0.12"
url = "2"
