[package]
name = "pan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pan"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde_json = "1"
futures-util = "0.3"
anyhow = "1"
ratatui-textarea = { version = "0.9", features = ["crossterm"] }
pulldown-cmark = "0.13"
url = "2"
toml = "1.1"
serde = { version = "1", features = ["derive"] }
similar = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
