[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pantheon"
version = "0.1.0"
description = "Cost-aware LLM router for your terminal"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.35.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pan = "pantheon.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pantheon*"]
